full update to portfolio

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -40,6 +40,8 @@ nav ul li {
  }
 
 
+
+
  img {
      margin: auto;
      border: thick 10px lightgray;
@@ -70,13 +72,28 @@ section :hover {
      font-size: 250%;
 }
 
+.scrshts {
+    display: flex;
+}
+
+
+.avatar {
+    max-height: 300px;
+    max-width: fit-content;
+    border-radius: 100%;
+    border: 5px solid rgb(255, 255, 255);
+}
+
+img {
+    max-height: 200px;
+    max-width: fit-content;
+    }
+
+
 div {
     margin: 10px
 }
 
-div :hover {
-transform:scale(1.1)
-}
 
 h5 {
     margin-top: 200px;
